// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vite > v4-vite-plugin > css 1`] = `
"/*! tailwindcss v<version> | MIT License | https://tailwindcss.com */
@supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color: rgb(from red r g b)))) {
    view,text,:before,:after {
      --tw-gradient-position: initial;
      --tw-gradient-from: rgba(0,0,0,0);
      --tw-gradient-via: rgba(0,0,0,0);
      --tw-gradient-to: rgba(0,0,0,0);
      --tw-gradient-stops: initial;
      --tw-gradient-via-stops: initial;
      --tw-gradient-from-position: 0%;
      --tw-gradient-via-position: 50%;
      --tw-gradient-to-position: 100%;
    }
  }

page,.tw-root,wx-root-portal-content,:host {
  --color-green-400: rgb(5, 223, 114);
  --color-sky-400: rgb(0, 187, 253);
}

@supports (color: color(display-p3 0 0 0%)) {
page,.tw-root,wx-root-portal-content,:host {
  --color-sky-400: rgb(0, 187, 253);
}

@media (color-gamut: p3) {
page,.tw-root,wx-root-portal-content,:host {
  --color-sky-400: color(display-p3 0.30598 0.72501 0.98017);
}
}
}

view,text,:after,:before {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}

.bg-_b_h123456_B {
  background-color: #123456;
}

.bg-gradient-to-r {
  --tw-gradient-position: to right in oklab;
  background-image: linear-gradient(var(--tw-gradient-stops));
}

.from-green-400 {
  --tw-gradient-from: var(--color-green-400);
  --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
}

.to-sky-400 {
  --tw-gradient-to: var(--color-sky-400);
  --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
}

.bg-clip-text {
  -webkit-background-clip: text;
  background-clip: text;
}

.text-_b_h123456_B {
  color: #123456;
}

.text-transparent {
  color: rgba(0,0,0,0);
}

@property --tw-gradient-position {
  syntax: "*";
  inherits: false
}

@property --tw-gradient-from {
  syntax: "<color>";
  inherits: false;
  initial-value: rgba(0,0,0,0);
}

@property --tw-gradient-via {
  syntax: "<color>";
  inherits: false;
  initial-value: rgba(0,0,0,0);
}

@property --tw-gradient-to {
  syntax: "<color>";
  inherits: false;
  initial-value: rgba(0,0,0,0);
}

@property --tw-gradient-stops {
  syntax: "*";
  inherits: false
}

@property --tw-gradient-via-stops {
  syntax: "*";
  inherits: false
}

@property --tw-gradient-from-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 0%;
}

@property --tw-gradient-via-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 50%;
}

@property --tw-gradient-to-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 100%;
}
"
`;

exports[`vite > v4-vite-plugin > js 1`] = `
"(function polyfill() {
  const relList = document.createElement("link").relList;
  if (relList && relList.supports && relList.supports("modulepreload")) return;
  for (const link of document.querySelectorAll('link[rel="modulepreload"]')) processPreload(link);
  new MutationObserver((mutations) => {
    for (const mutation of mutations) {
      if (mutation.type !== "childList") continue;
      for (const node of mutation.addedNodes) if (node.tagName === "LINK" && node.rel === "modulepreload") processPreload(node);
    }
  }).observe(document, {
    childList: true,
    subtree: true
  });
  function getFetchOpts(link) {
    const fetchOpts = {};
    if (link.integrity) fetchOpts.integrity = link.integrity;
    if (link.referrerPolicy) fetchOpts.referrerPolicy = link.referrerPolicy;
    if (link.crossOrigin === "use-credentials") fetchOpts.credentials = "include";
    else if (link.crossOrigin === "anonymous") fetchOpts.credentials = "omit";
    else fetchOpts.credentials = "same-origin";
    return fetchOpts;
  }
  function processPreload(link) {
    if (link.ep) return;
    link.ep = true;
    const fetchOpts = getFetchOpts(link);
    fetch(link.href, fetchOpts);
  }
})();
console.log("bg-_b_h123456_B text-_b_h123456_B first-letter_cmarker_ctext-clip");
"
`;

exports[`vite > v4-vite-postcss > css 1`] = `
"/*! tailwindcss v<version> | MIT License | https://tailwindcss.com */
view,text,:after,:before {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.bg-_b_h123456_B {
  background-color: #123456;
}
.text-_b_h123456_B {
  color: #123456;
}
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter view::marker {
      text-overflow: clip;
    }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter text::marker {
      text-overflow: clip;
    }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter::marker {
      text-overflow: clip;
    }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter view::-webkit-details-marker {
      text-overflow: clip;
    }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter text::-webkit-details-marker {
      text-overflow: clip;
    }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter::-webkit-details-marker {
      text-overflow: clip;
    }
"
`;

exports[`vite > v4-vite-postcss > js 1`] = `
"(function polyfill() {
  const relList = document.createElement("link").relList;
  if (relList && relList.supports && relList.supports("modulepreload")) return;
  for (const link of document.querySelectorAll('link[rel="modulepreload"]')) processPreload(link);
  new MutationObserver((mutations) => {
    for (const mutation of mutations) {
      if (mutation.type !== "childList") continue;
      for (const node of mutation.addedNodes) if (node.tagName === "LINK" && node.rel === "modulepreload") processPreload(node);
    }
  }).observe(document, {
    childList: true,
    subtree: true
  });
  function getFetchOpts(link) {
    const fetchOpts = {};
    if (link.integrity) fetchOpts.integrity = link.integrity;
    if (link.referrerPolicy) fetchOpts.referrerPolicy = link.referrerPolicy;
    if (link.crossOrigin === "use-credentials") fetchOpts.credentials = "include";
    else if (link.crossOrigin === "anonymous") fetchOpts.credentials = "omit";
    else fetchOpts.credentials = "same-origin";
    return fetchOpts;
  }
  function processPreload(link) {
    if (link.ep) return;
    link.ep = true;
    const fetchOpts = getFetchOpts(link);
    fetch(link.href, fetchOpts);
  }
})();
console.log("bg-_b_h123456_B text-_b_h123456_B");
"
`;
